# Email-Classification

./: MLmodel.ipynb  README.md  app.py  model.pkl  pyproject.toml
static/: style.css
templates/: index.html
